# unstation-desktop

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/scripts/: wait-for-rpc.sh
.github/workflows/: ci.yml  e2e.yml  pages.yml  release-macos.yml  release.yml  seed-release.yml
brand/: README.md
crates/hls-server/: Cargo.toml
crates/hls-server/src/: lib.rs
crates/hls-server/tests/: go_live.rs  real_video.rs
crates/transport-libdc/: Cargo.toml
crates/transport-libdc/src/: lib.rs
crates/transport-libdc/tests/: burst_catchup_loopback.rs  fanout_loopback.rs  impaired_relay.rs  libdc_loopback.rs  mesh_loopback.rs
crates/unstation-app/: Cargo.toml
crates/unstation-app/src/: camera.rs  fasttier.rs  lib.rs
crates/unstation-chain/: Cargo.toml
crates/unstation-chain/src/: bulletin.rs  lib.rs  sso_pair.rs  volunteer.rs
crates/unstation-chain/tests/: chain_e2e.rs  paseo_smoke.rs
crates/unstation-core/: Cargo.toml
crates/unstation-core/benches/: codec.rs  offchain.rs  picker.rs
crates/unstation-core/fuzz/: Cargo.toml
crates/unstation-core/fuzz/fuzz_targets/: buffermap_bytes.rs  h264_poc_mux.rs  presence_merge.rs  protocol_decode.rs  reassembler.rs  sps_dimensions.rs
crates/unstation-core/src/: buffermap.rs  chat_codec.rs  clock.rs  config.rs  crypto.rs  engine.rs  lib.rs  manifest.rs  media.rs  netsim.rs  node.rs  origin_mem.rs  peer.rs  picker.rs  protocol.rs  reassembly.rs  signaling.rs  statement_store_mem.rs  store.rs  topic.rs  transport.rs  transport_mem.rs  types.rs  volunteer.rs
crates/unstation-core/tests/: adversarial.rs  churn.rs  connectivity.rs  discovery.rs  fallback.rs  gossip.rs  live_publish.rs  performance.rs  props.proptest-regressions  props.rs  scalability.rs  scale_sim.rs  sim.rs  two_peer.rs  vod_origin.rs
crates/unstation-node/: Cargo.toml  README.md
crates/unstation-node/src/: keydir.rs  main.rs  pair.rs  policy.rs  recruit.rs  streams.rs  supervisor.rs  worker.rs
crates/unstation-node/tests/: seed_e2e.rs
crates/unstation-session/: Cargo.toml
crates/unstation-session/src/: dialer.rs  lib.rs
crates/whip-ingest/: Cargo.toml
crates/whip-ingest/src/: egress.rs  lib.rs  rtp.rs  server.rs
crates/whip-ingest/tests/: chrome_answer.rs  ffmpeg_whip.rs
desktop/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
desktop/src/: ambient.js  copy.js  fasttier.js  health.js  index.html  invite.js  main.js  player.js  sso.js  state.js  tauri.js  wasm-compat.js
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/scenes/: onboarding.js  publish.js  settings.js  watch.js
desktop/src/styles/: base.css  components.css  index.css  layout.css  scenes.css  tokens.css
docs/: build.py  contributing.md  engineering.md  faq.md  how-it-works.md  index.md  protocol.md  run-a-relay.md  security.md
docs/assets/css/: docs.css
docs/assets/js/: docs.js
infra/segmenter/: Cargo.toml
infra/segmenter/src/: fmp4.rs  h264_poc.rs  lib.rs  sps.rs
scripts/: coverage.sh  dev-chain.sh  mock-obs.sh  mock-whip.sh  provision-allowance.sh  release-macos.sh  test-all.sh
scripts/seed/: install.sh  unstation-seed.service
