[workspace]
resolver = "2"
members = [
    "crates/unstation-core",
    "crates/transport-libdc",
    "crates/unstation-node",
    "crates/hls-server",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/parity/unstation-desktop"
rust-version = "1.78"

[workspace.dependencies]
bytes = "1"
bitvec = "1"
parity-scale-codec = { version = "3", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
