[workspace]
resolver = "2"
members = [
    "crates/unstation-core",
    "crates/transport-libdc",
    "crates/unstation-node",
    "crates/hls-server",
    "infra/segmenter",
]
# The Tauri app and the chain-integration crate are their own crates — kept out of
# the engine workspace so the heavy tauri/wry and chain-SDK builds don't slow
# `cargo test --workspace` (the deterministic simulator stays SDK-free).
exclude = ["desktop/src-tauri", "crates/unstation-chain", "crates/unstation-session"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/parity/unstation-desktop"
rust-version = "1.78"

[workspace.dependencies]
bytes = "1"
bitvec = "1"
parity-scale-codec = { version = "3", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
