[package]
name = "transport-libdc"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
datachannel = "0.16.0"
unstation-core = { path = "../unstation-core" }
tokio = { workspace = true }
serde_json = "1"
log = "0.4"

[dev-dependencies]
parity-scale-codec.workspace = true
