[package]
name = "unstation-app"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unstation — shared Tauri command/event layer (desktop + Android shells)."

# NOTE: excluded from the engine workspace (see ../../Cargo.toml) alongside the shells,
# because it pulls in tauri/wry + the chain SDK and would slow `cargo test --workspace`.

[dependencies]
# `tauri` here has NO `macos-private-api` — the desktop shell adds that feature, and
# Cargo feature-unification turns it on only for the desktop build. Android gets plain tauri.
tauri = { version = "2" }
# Cross-platform URL/intent opener — Android uses it to fire the polkadotapp:// pairing
# deep-link at the on-device Polkadot app (ACTION_VIEW). Harmless/unused on desktop.
tauri-plugin-opener = "2"
# Inbound unstation://watch/<name> invite links, on BOTH shells: desktop scheme
# registration lives in the desktop tauri.conf.json (`plugins.deep-link.desktop.schemes`);
# Android delivery comes from the VIEW intent-filter in its AndroidManifest.xml.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
log = "0.4"
env_logger = "0.11"

# The real engine.
unstation-core = { path = "../unstation-core" }
transport-libdc = { path = "../transport-libdc" }
hls-server = { path = "../hls-server" }
# ffmpeg/RTMP publish source — desktop-only; behind the `publish` feature. The Android
# shell (watch) omits it; Android publish (M4) supplies a camera-based source instead.
segmenter = { path = "../../infra/segmenter", optional = true }
# WHIP ingest (RFC 9725, sub-second). The RTP depacketizer is light; the `server`
# feature (media-enabled libdatachannel) is added for non-Android below — Android
# publishes from the camera, not WHIP, so it stays on the light default.
whip-ingest = { path = "../whip-ingest", optional = true }
bytes = "1"

# Real chain integration.
unstation-session = { path = "../unstation-session" }
unstation-chain = { path = "../unstation-chain" }
# SCALE-encodes the volunteer `Recruitment`s the publisher recruiter posts (R5).
parity-scale-codec = "3"
useragent-native = { package = "useragent-native", path = "../../../useragent-kit/crates/host-native" }
# testnet-provisioning embeds Alice's dev key → SDK forbids optimized release builds;
# keep debug-assertions on in the consuming shells' release profile (LAN test builds).
useragent-chain = { package = "useragent-chain", path = "../../../useragent-kit/crates/host-chain", features = ["testnet-provisioning"] }
schnorrkel = "0.11"
bip39 = { version = "2", features = ["rand"] }

# Android camera-publish (M4): the Kotlin capture plugin pushes encoded H.264 access units
# into Rust over JNI (see `camera.rs`). Android-only; no effect on the desktop build.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Desktop pulls the WHIP server (media libdatachannel); Android doesn't (camera ingest).
[target.'cfg(not(target_os = "android"))'.dependencies]
whip-ingest = { path = "../whip-ingest", features = ["server"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# The publish path. `dep:whip-ingest` turns the crate on; the non-Android target table
# above adds its `server` feature so desktop gets the WHIP endpoint.
publish = ["dep:segmenter", "dep:whip-ingest"]
