[package]
name = "unstation-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "The Unstation mesh engine: deadline-aware piece-picker, buffer maps, segment store, wire protocol — IO-agnostic and trait-based."

[dependencies]
bytes.workspace = true
bitvec.workspace = true
parity-scale-codec.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake2 = "0.10"
schnorrkel = "0.11"
tokio.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "3"
pollster = "0.3"

[[bench]]
name = "picker"
harness = false

[[bench]]
name = "codec"
harness = false
