[package]
name = "unstation-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "The Unstation mesh engine: deadline-aware piece-picker, buffer maps, segment store, wire protocol — IO-agnostic and trait-based."

[dependencies]
bytes.workspace = true
bitvec.workspace = true
parity-scale-codec.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake2 = "0.10"
schnorrkel = "0.11"
# Signaling-envelope confidentiality (Tier 0 privacy): X25519 ECDH + XChaCha20-Poly1305,
# so SDP/ICE (peer IPs) never hit the public statement store in the clear. Handshake-only
# — nothing on the media path. curve25519-dalek 4.x is already in-tree via schnorrkel.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
tokio.workspace = true
# Lightweight logging facade for mesh observability (discovery, edge, Want/segment flow).
# Calls are no-ops unless the host installs a logger, so the deterministic simulator is
# unaffected; the desktop/mobile shells route it through env_logger.
log = "0.4"

[features]
# Deterministic network-impairment simulation harness (`netsim` module + the
# `MeshNode::sim_*` step hooks). Test/bench-only — never in a production build. Enabled
# automatically under `cfg(test)`; integration tests + the tuning bench opt in explicitly.
netsim = []

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "3"
pollster = "0.3"

[[bench]]
name = "picker"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "offchain"
harness = false
