[package]
name = "unstation-desktop"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unstation — decentralized P2P live streaming (desktop)."
default-run = "unstation-desktop"

[lib]
name = "unstation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The desktop shell is thin: it supplies the desktop tauri context (generate_context!) +
# the macos-private-api window vibrancy, and runs the shared command/event layer from
# `unstation-app` with the ffmpeg-based `publish` path enabled. All engine/chain deps are
# transitive through unstation-app. (testnet-provisioning still applies via that crate,
# hence the debug-assertions release profile below stays.)
tauri = { version = "2", features = ["macos-private-api"] }
unstation-app = { path = "../../crates/unstation-app", features = ["publish"] }

[features]
# Enables the system webview private API needed for native macOS window vibrancy.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# This crate is excluded from the engine workspace (see ../../Cargo.toml), so it
# needs its own release profile. These optimized DMGs are PRIVATE LAN test builds
# between our own machines — NOT public distribution. We keep `debug-assertions`
# on so the SDK's testnet allowance helper (which embeds Alice's dev key, and is
# hard-blocked by the SDK when debug_assertions is off) stays permitted while we
# still get an optimized binary for realistic testing.
#
# BEFORE ANY PUBLIC RELEASE: drop `debug-assertions` here AND the
# `testnet-provisioning` feature on the `useragent-chain` dep above, then provision
# the statement-store allowance through real (phone-QR) personhood instead.
[profile.release]
debug-assertions = true
opt-level = 3
lto = "thin"
