[package]
name = "unstation-desktop"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unstation — decentralized P2P live streaming (desktop)."
default-run = "unstation-desktop"

[lib]
name = "unstation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The desktop shell is thin: it supplies the desktop tauri context (generate_context!) +
# the macos-private-api window vibrancy, and runs the shared command/event layer from
# `unstation-app` with the ffmpeg-based `publish` path enabled. All engine/chain deps are
# transitive through unstation-app. (testnet-provisioning still applies via that crate,
# hence the debug-assertions release profile below stays.)
tauri = { version = "2", features = ["macos-private-api"] }
unstation-app = { path = "../../crates/unstation-app", features = ["publish"] }
# Required by tauri::generate_context! once tauri.conf.json carries a `plugins` section
# (the macro embeds the plugin config as serde_json values referencing this crate root).
serde_json = "1"
# Invite deep-links (unstation://watch/<name>). The plugin itself is registered in the
# shared unstation-app builder; the direct dep here is still REQUIRED so tauri_build
# discovers its ACL permissions (deep-link:*) — plugin permission files only propagate
# to the app crate running the tauri_build script (Cargo `links`/DEP_ env); a transitive
# dep through unstation-app is not enough. Same pattern as tauri-plugin-opener in the
# Android shell.
tauri-plugin-deep-link = "2"
# Desktop-only: a second app launch (e.g. the OS handing us an unstation:// URL on
# Windows/Linux, where deep links spawn a new process) focuses the running window; the
# `deep-link` feature forwards any URLs in the second instance's argv to the deep-link
# plugin so the JS onOpenUrl handler sees them.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[features]
# Enables the system webview private API needed for native macOS window vibrancy.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# This crate is excluded from the engine workspace (see ../../Cargo.toml), so it
# needs its own release profile. These optimized DMGs are PRIVATE LAN test builds
# between our own machines — NOT public distribution. We keep `debug-assertions`
# on so the SDK's testnet allowance helper (which embeds Alice's dev key, and is
# hard-blocked by the SDK when debug_assertions is off) stays permitted while we
# still get an optimized binary for realistic testing.
#
# BEFORE ANY PUBLIC RELEASE: drop `debug-assertions` here AND the
# `testnet-provisioning` feature on the `useragent-chain` dep above, then provision
# the statement-store allowance through real (phone-QR) personhood instead.
[profile.release]
debug-assertions = true
opt-level = 3
lto = "thin"
