[package]
name = "segmenter"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Real CMAF/fMP4 segmenter (ffmpeg) → content-addressed segments for the mesh."

[dependencies]
unstation-core = { path = "../../crates/unstation-core" }
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
