# Detached fuzz crate (own [workspace] so the stable workspace build ignores it).
# Run with: cargo +nightly fuzz run protocol_decode
[package]
name = "unstation-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
parity-scale-codec = "3"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.unstation-core]
path = ".."

# The CMAF/H.264 media parsers (SPS dimensions + POC slice headers) parse untrusted RTP/WHIP
# bytes; fuzz them here alongside the wire decoders. Resolves to the same unstation-core above.
[dependencies.segmenter]
path = "../../../infra/segmenter"

[[bin]]
name = "protocol_decode"
path = "fuzz_targets/protocol_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reassembler"
path = "fuzz_targets/reassembler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "buffermap_bytes"
path = "fuzz_targets/buffermap_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "presence_merge"
path = "fuzz_targets/presence_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sps_dimensions"
path = "fuzz_targets/sps_dimensions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h264_poc_mux"
path = "fuzz_targets/h264_poc_mux.rs"
test = false
doc = false
bench = false

[workspace]
